--- a/package.json
+++ b/package.json
@@ -2,18 +2,26 @@
   "name": "cardbackend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/patteesolomon/jcaCardBackEnd.git"
+  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/patteesolomon/jcaCardBackEnd/issues"
+  },
+  "homepage": "https://github.com/patteesolomon/jcaCardBackEnd#readme",
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "method-override": "^3.0.0",
     "mongoose": "^6.8.4",
-    "nodemon": "^2.0.20",
-    "pug": "^3.0.2"
+    "pexels": "^1.4.0"
   }
 }
