--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/patteesolomon/jcaCardBackEnd#readme",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "method-override": "^3.0.0",
     "mongoose": "^6.8.4",
