--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.2",
     "method-override": "^3.0.0",
     "mongoose": "^6.8.4",
+    "nodemon": "^2.0.20",
     "pexels": "^1.4.0"
   }
 }
